--- a/mongo.redis/src/main/resources/application.properties
+++ b/mongo.redis/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=test
 spring.data.mongodb.port=27017
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+spring.cache.redis.time-to-live=600000
+spring.cache.redis.use-key-prefix=false
+spring.cache.redis.cache-null-values=false
